--- a/_posts/2024-05-24-llvm: ast.md
+++ b/_posts/2024-05-24-llvm: ast.md
@@ -265,6 +265,13 @@ public:
         }
     }
 
+    /// Callback invoked when the current TokenLexer hits the end of its token stream.
+    bool HandleEndOfTokenLexer(Token &Result);
+    {
+        // Handle this like a #include file being popped off the stack.
+        return HandleEndOfFile(Result, true);
+    }
+
     /// Lex the next token for this preprocessor.
     void Lex(Token &Result);
     {
@@ -273,6 +280,31 @@ public:
             CurLexer->Lex(Result);
         }
     }
+
+    // callbacks: lexer在处理过程中调用callback触发预处理
+
+    /// Callback invoked when the lexer reads an identifier and has
+    /// filled in the tokens IdentifierInfo member.
+    /// 检查已识别的标识符是否是已定义的macro
+    bool HandleIdentifier(Token &Identifier);
+
+    /// Callback invoked when the lexer sees a # token at the start of a line.
+    ///
+    /// This consumes the directive, modifies the lexer/preprocessor state, and
+    /// advances the lexer(s) so that the next token read is the correct one.
+    void HandleDirective(Token &Result);
+
+    // 处理各种macro指令
+    void HandleIncludeDirective(...);
+    void HandleDefineDirective(...);
+    void HandleUndefDirective();
+    void HandleIfdefDirective(...);
+    void HandleIfDirective(...);
+    void HandleEndifDirective(...);
+    void HandleElseDirective(...);
+    void HandleElifFamilyDirective(...);
+    void HandlePragmaDirective(...);
+    void HandleUndefDirective(...);
 }
 
 /// Lexer - This provides a simple interface that turns a text buffer into a stream of tokens.
@@ -375,6 +407,9 @@ public:
     void ActOnCaseStmtBody(Stmt *CaseStmt, Stmt *SubStmt);
 
     // 生成ast
+    Decl *ActOnDeclarator(Scope *S, Declarator &D);
+    Decl *ActOnParamDeclarator(Scope *S, Declarator &D, ...);
+    Decl *ActOnStartOfFunctionDef(Scope *S, Declarator &D, ...);
     Decl *ActOnFinishFunctionBody(Decl *Decl, Stmt *Body);
     Decl *ActOnFileScopeAsmDecl(Expr *expr, ...);
     Decl *ActOnTopLevelStmtDecl(Stmt *Statement);
@@ -428,19 +463,626 @@ public:
 ```
 
 从以上核心代码可以看出他们的职责和关系如下：
-* `Parser`负责根据语法规则驱动解析的过程，从`Preprocessor`获取token，把语法单元传递给`Sema`
 * `Lexer`负责解析单个源文件的`token`，`TokenLexer`负责处理`macro`扩展
-* `Preprocessor`负责利用`Lexer`和`TokenLexer`处理`#include/#define`等预处理指令
+* `Preprocessor`负责管理`lexer`栈并处理`#include/#define`等预处理指令
+* `Parser`负责根据语法规则驱动解析的过程，从`Preprocessor`获取token，把语法单元传递给`Sema`
 * `Sema`负责对语法单元进行语义分析以及生成`AST`
 
 
 ## 词法分析
 
+`Lexer`负责解析单个源文件的`token`，遇到标识符和宏指令时通过`callback`通知`Preprocessor`进行处理
 
+```c++
 
+// 解析每个字符，根据c11的词法规则分析其类型
+bool Lexer::Lex(Token &Result) {
+    // Start a new token.
+    Result.startToken();
+    {
+        Kind = tok::unknown;
+        Flags = 0;
+        PtrData = nullptr;
+        UintData = 0;
+    }
+
+    // 数字常量/字符串常量/标识符/宏指令/各种标点及其组合
+    return LexTokenInternal(Result, atPhysicalStartOfLine);
+    {
+    LexStart:
+        const char *CurPtr = BufferPtr;
+
+        // 跳过空白
+        if (isHorizontalWhitespace(*CurPtr)) {
+            do {
+                ++CurPtr;
+            } while (isHorizontalWhitespace(*CurPtr));
+
+            BufferPtr = CurPtr;
+            Result.setFlag(Token::LeadingSpace);
+        }
+
+        // 处理转义，获取一个有效字符
+        char Char = getAndAdvanceChar(CurPtr, Result);
+
+        tok::TokenKind Kind;
+
+        switch (Char) {
+        case 0:  // Null.
+            // Found end of file?
+            if (CurPtr - 1 == BufferEnd)
+                return LexEndOfFile(Result, CurPtr-1);
+            
+            SkipWhitespace(Result, CurPtr, TokAtPhysicalStartOfLine);
+            goto LexNextToken;
+        case '\r':
+            if (CurPtr[0] == '\n')
+                (void)getAndAdvanceChar(CurPtr, Result);
+            [[fallthrough]];
+        case '\n':
+            // No leading whitespace seen so far.
+            Result.clearFlag(Token::LeadingSpace);
+            SkipWhitespace(Result, CurPtr, TokAtPhysicalStartOfLine);
+            goto LexNextToken;
+        case ' ':
+        case '\t':
+            // 跳过行内空白
+            SkipHorizontalWhitespace:
+                Result.setFlag(Token::LeadingSpace);
+                SkipWhitespace(Result, CurPtr, TokAtPhysicalStartOfLine);
+            
+            // 跳过注释
+            SkipIgnoredUnits:
+                CurPtr = BufferPtr;
+
+            if (CurPtr[0] == '/' && CurPtr[1] == '/') {
+                SkipLineComment(Result, CurPtr+2, TokAtPhysicalStartOfLine);
+                goto SkipIgnoredUnits;
+            } else if (CurPtr[0] == '/' && CurPtr[1] == '*') {
+                SkipBlockComment(Result, CurPtr+2, TokAtPhysicalStartOfLine);
+                goto SkipIgnoredUnits;
+            } else if (isHorizontalWhitespace(*CurPtr)) {
+                goto SkipHorizontalWhitespace;
+            }
+
+            goto LexNextToken;
+        
+        // 数字常量
+        case '0': case '1': case '2': case '3': case '4':
+        case '5': case '6': case '7': case '8': case '9':
+            return LexNumericConstant(Result, CurPtr);
+        
+        // Identifier (e.g., uber), or
+        // UTF-8 (C23/C++17) or UTF-16 (C11/C++11) character literal, or
+        // UTF-8 or UTF-16 string literal (C11/C++11).
+        case 'u':
+        // Identifier (e.g. Uber) or C11/C++11 UTF-32 string literal
+        case 'U':
+        // Identifier or C++0x raw string literal
+        case 'R':
+            // 对于c11来说都是普通字符
+            return LexIdentifierContinue(Result, CurPtr);
+        // Identifier (e.g. Loony) or wide literal (L'x' or L"xyz").
+        case 'L':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            // Wide string literal.
+            if (Char == '"')
+                return LexStringLiteral(Result, ...);
+            // Wide character constant.
+            if (Char == '\'')
+                return LexCharConstant(Result, ...);
+            [[fallthrough]];
+        // C99 6.4.2: Identifiers.
+        case 'A': case 'B': case 'C': case 'D': case 'E': case 'F': case 'G':
+        case 'H': case 'I': case 'J': case 'K':    /*'L'*/case 'M': case 'N':
+        case 'O': case 'P': case 'Q':    /*'R'*/case 'S': case 'T':    /*'U'*/
+        case 'V': case 'W': case 'X': case 'Y': case 'Z':
+        case 'a': case 'b': case 'c': case 'd': case 'e': case 'f': case 'g':
+        case 'h': case 'i': case 'j': case 'k': case 'l': case 'm': case 'n':
+        case 'o': case 'p': case 'q': case 'r': case 's': case 't':    /*'u'*/
+        case 'v': case 'w': case 'x': case 'y': case 'z':
+        case '_':
+            return LexIdentifierContinue(Result, CurPtr);
+        // C99 6.4.4: Character Constants.
+        case '\'':
+            return LexCharConstant(Result, CurPtr, tok::char_constant);
+        // C99 6.4.5: String Literals.
+        case '"':
+            return LexStringLiteral(Result, CurPtr, ...);
+        case '$':
+            Kind = tok::unknown;
+            break;   
+        // C99 6.4.6: Punctuators.
+        case '?':
+            Kind = tok::question;
+            break;
+        case '[':
+            Kind = tok::l_square;
+            break;
+        case ']':
+            Kind = tok::r_square;
+            break;
+        case '(':
+            Kind = tok::l_paren;
+            break;
+        case ')':
+            Kind = tok::r_paren;
+            break;
+        case '{':
+            Kind = tok::l_brace;
+            break;
+        case '}':
+            Kind = tok::r_brace;
+            break;
+        case '.':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            // 浮点数
+            if (Char >= '0' && Char <= '9') {
+                return LexNumericConstant(Result, ...);
+            } else if (Char == '.' && getCharAndSize(CurPtr+SizeTmp, SizeTmp2) == '.') {
+                // 三个点
+                Kind = tok::ellipsis;
+                CurPtr = ConsumeChar(ConsumeChar(CurPtr, SizeTmp, Result), SizeTmp2, Result);
+            } else {
+                Kind = tok::period;
+            }
+            break;
+        case '&':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '&') {
+                Kind = tok::ampamp;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else if (Char == '=') {
+                Kind = tok::ampequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::amp;
+            }
+            break;
+        case '*':
+            if (getCharAndSize(CurPtr, SizeTmp) == '=') {
+                Kind = tok::starequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::star;
+            }
+            break;
+        case '+':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '+') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::plusplus;
+            } else if (Char == '=') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::plusequal;
+            } else {
+                Kind = tok::plus;
+            }
+            break;
+        case '-':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '-') {      // --
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::minusminus;
+            } else if (Char == '>') {   // ->
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::arrow;
+            } else if (Char == '=') {   // -=
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::minusequal;
+            } else {
+                Kind = tok::minus;
+            }
+            break;
+        case '~':
+            Kind = tok::tilde;
+            break;
+        case '!':
+            if (getCharAndSize(CurPtr, SizeTmp) == '=') {
+                Kind = tok::exclaimequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::exclaim;
+            }
+            break;
+        case '/':
+            // 6.4.9: Comments
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '/') {         // Line comment.
+                SkipLineComment(Result, ...);
+                goto SkipIgnoredUnits;
+            }
+            if (Char == '*') {  // /**/ comment.
+                SkipBlockComment(Result, ...);
+                goto LexNextToken;
+            }
+
+            if (Char == '=') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::slashequal;
+            } else {
+                Kind = tok::slash;
+            }
+            break;
+        case '%':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '=') {
+                Kind = tok::percentequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::percent;
+            }
+            break;
+        case '<':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (ParsingFilename) {
+                return LexAngledStringLiteral(Result, CurPtr);
+            } else if (Char == '<') {
+                char After = getCharAndSize(CurPtr+SizeTmp, SizeTmp2);
+                if (After == '=') {
+                    Kind = tok::lesslessequal;
+                    CurPtr = ConsumeChar(ConsumeChar(CurPtr, SizeTmp, Result), SizeTmp2, Result);
+                } else {
+                    CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                    Kind = tok::lessless;
+                }
+            } else if (Char == '=') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::lessequal;
+            } else {
+                Kind = tok::less;
+            }
+            break;
+        case '>':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '=') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::greaterequal;
+            } else if (Char == '>') {
+                char After = getCharAndSize(CurPtr+SizeTmp, SizeTmp2);
+                if (After == '=') {
+                    CurPtr = ConsumeChar(ConsumeChar(CurPtr, SizeTmp, Result), SizeTmp2, Result);
+                    Kind = tok::greatergreaterequal;
+                } else {
+                    CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                    Kind = tok::greatergreater;
+                }
+            } else {
+                Kind = tok::greater;
+            }
+            break;
+        case '^':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '=') {
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+                Kind = tok::caretequal;
+            } else {
+                Kind = tok::caret;
+            }
+            break;
+        case '|':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '=') {
+                Kind = tok::pipeequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else if (Char == '|') {
+                Kind = tok::pipepipe;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::pipe;
+            }
+            break;
+        case ':':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == ':') {
+                Kind = tok::coloncolon;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::colon;
+            }
+            break;
+        case ';':
+            Kind = tok::semi;
+            break;
+        case '=':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '=') {
+                Kind = tok::equalequal;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                Kind = tok::equal;
+            }
+            break;
+        case ',':
+            Kind = tok::comma;
+            break;
+        case '#':
+            Char = getCharAndSize(CurPtr, SizeTmp);
+            if (Char == '#') {
+                Kind = tok::hashhash;
+                CurPtr = ConsumeChar(CurPtr, SizeTmp, Result);
+            } else {
+                // We parsed a # character.  If this occurs at the start of the line,
+                // it's actually the start of a preprocessing directive.  Callback to
+                // the preprocessor to handle it.
+                if (TokAtPhysicalStartOfLine && !LexingRawMode && !Is_PragmaLexer)
+                    goto HandleDirective;
+
+                Kind = tok::hash;
+            }
+            break;
+        case '@':
+            Kind = tok::unknown;
+            break;
+
+        // UCNs (C99 6.4.3, C++11 [lex.charset]p2)
+        case '\\':
+            if (uint32_t CodePoint = tryReadUCN(CurPtr, BufferPtr, &Result)) {
+                if (CheckUnicodeWhitespace(Result, CodePoint, CurPtr)) {
+                    SkipWhitespace(Result, CurPtr, TokAtPhysicalStartOfLine);
+
+                    // We only saw whitespace, so just try again with this lexer.
+                    // (We manually eliminate the tail call to avoid recursion.)
+                    goto LexNextToken;
+                }
+
+                return LexUnicodeIdentifierStart(Result, CodePoint, CurPtr);
+            }
+
+            Kind = tok::unknown;
+            break;
+
+        default: {
+            if (isASCII(Char)) {
+                Kind = tok::unknown;
+                break;
+            }
+
+            BufferPtr = CurPtr+1;
+            goto LexNextToken;
+        }
+        }
+
+        // Update the location of token as well as BufferPtr.
+        FormTokenWithChars(Result, CurPtr, Kind);
+        return true;
+
+    HandleDirective:
+        // 处理#开头的指令
+        FormTokenWithChars(Result, CurPtr, tok::hash);
+        PP->HandleDirective(Result);
+        return false;
+
+    LexNextToken:
+        Result.clearFlag(Token::NeedsCleaning);
+        goto LexStart;
+    }
+}
+
+// 识别标识符
+bool Lexer::LexIdentifierContinue(Token &Result, const char *CurPtr) {
+    CurPtr = fastParseASCIIIdentifier(CurPtr, BufferEnd);
+    {
+        unsigned char C = *CurPtr;
+        while (isAsciiIdentifierContinue(C))
+            C = *++CurPtr;
+        return CurPtr;
+    }
+
+    const char *IdStart = BufferPtr;
+    FormTokenWithChars(Result, CurPtr, tok::raw_identifier);
+    Result.setRawIdentifierData(IdStart);
+
+    const IdentifierInfo *II = PP->LookUpIdentifierInfo(Result);
+
+    // 判断标识符是否是已定义的macro，是则需要进行宏扩展
+    // Finally, now that we know we have an identifier, pass this off to the
+    // preprocessor, which may macro expand it or something.
+    if (II->isHandleIdentifierCase())
+        return PP->HandleIdentifier(Result);
+
+    return true;
+}
+
+```
+
+`TokenLexer`负责处理宏扩展
+
+```c++
+
+bool TokenLexer::Lex(Token &Tok) {
+    if (isAtEnd()) {
+        // 根据c11规则: 正在扩展的macro不允许再次扩展
+        if (Macro) Macro->EnableMacro();
+
+        Tok.startToken();
+        Tok.setFlagValue(Token::StartOfLine , AtStartOfLine);
+        Tok.setFlagValue(Token::LeadingSpace, ...);
+        if (CurTokenIdx == 0)
+            Tok.setFlag(Token::LeadingEmptyMacro);
+        return PP.HandleEndOfTokenLexer(Tok);
+    }
+
+    bool isFirstToken = CurTokenIdx == 0;
+
+    // Get the next token to return.
+    Tok = Tokens[CurTokenIdx++];
+
+    // 宏扩展时遇到##表示其前后的token需要进行拼接
+    // If this token is followed by a token paste (##) operator, paste the tokens!
+    if (!isAtEnd() && Macro && Tokens[CurTokenIdx].is(tok::hashhash)) {
+        pasteTokens(Tok);
+    }
+
+    if (isFirstToken) {
+        Tok.setFlagValue(Token::StartOfLine , AtStartOfLine);
+        Tok.setFlagValue(Token::LeadingSpace, HasLeadingSpace);
+    } else {
+        if (AtStartOfLine) Tok.setFlag(Token::StartOfLine);
+        if (HasLeadingSpace) Tok.setFlag(Token::LeadingSpace);
+    }
+    AtStartOfLine = false;
+    HasLeadingSpace = false;
+
+    // 扩展过程中又遇到已定义的宏需要扩展
+    // Handle recursive expansion!
+    if (Tok.getIdentifierInfo() != nullptr) {
+        IdentifierInfo *II = Tok.getIdentifierInfo();
+        Tok.setKind(II->getTokenID());
+
+        if (!DisableMacroExpansion && II->isHandleIdentifierCase())
+            return PP.HandleIdentifier(Tok);
+    }
+
+    return true;
+}
+
+```
 
 ## 预处理
 
+```c++
+
+// 检查标识符是否需要扩展
+void Preprocessor::HandleIdentifier(Token & Identifier) {
+    IdentifierInfo &II = *Identifier.getIdentifierInfo();
+
+    // 检查macro符号表判断标识符是否是已定义的macro
+    if (const MacroDefinition MD = getMacroDefinition(&II)) {
+        const auto *MI = MD.getMacroInfo();
+
+        if (!Identifier.isExpandDisabled() && MI->isEnabled()) {
+            // C99 6.10.3p10: If the preprocessing token immediately after the
+            // macro name isn't a '(', this macro should not be expanded.
+            // 简单宏和函数宏都要扩展
+            if (!MI->isFunctionLike() || isNextPPTokenLParen())
+                return HandleMacroExpandedIdentifier(Identifier, MD);
+        } else {
+            // C99 6.10.3.4p2 says that a disabled macro may never again be
+            // expanded, even if it's in a context where it could be expanded in the future.
+            // 一个宏在其某次递归扩展的过程中只能扩展一次
+            Identifier.setFlag(Token::DisableExpand);
+        }
+    }
+
+    return true;
+}
+
+/// HandleMacroExpandedIdentifier - If an identifier token is read that is to be
+/// expanded as a macro, handle it and return the next token as 'Identifier'.
+bool Preprocessor::HandleMacroExpandedIdentifier(Token &Identifier,
+                                                 const MacroDefinition &M) {
+    MacroInfo *MI = M.getMacroInfo();
+
+    // If this is a builtin macro, like __LINE__ or _Pragma, handle it specially.
+    if (MI->isBuiltinMacro()) {
+        if (Callbacks)
+            Callbacks->MacroExpands(Identifier, M, ..., /*Args=*/nullptr);
+        ExpandBuiltinMacro(Identifier);
+        return true;
+    }
+
+    /// Args - If this is a function-like macro expansion, this contains,
+    /// for each macro argument, the list of tokens that were provided to the invocation.
+    MacroArgs *Args = nullptr;
+
+    // If this is a function-like macro, read the arguments.
+    if (MI->isFunctionLike()) {
+        // 解析macro扩展的参数
+        Args = ReadMacroCallArgumentList(Identifier, MI, ExpansionEnd);
+    }
+
+    ...
+
+    // Start expanding the macro.
+    EnterMacro(Identifier, ExpansionEnd, MI, Args);
+    return false;
+}
+
+/// HandleDirective - This callback is invoked when the lexer sees a # token
+/// at the start of a line.  This consumes the directive, modifies the
+/// lexer/preprocessor state, and advances the lexer(s) so that the next token
+/// read is the correct one.
+void Preprocessor::HandleDirective(Token &Result) {
+    // Read the next token, the directive flavor.  
+    // This isn't expanded due to C99 6.10.3p8.
+    LexUnexpandedToken(Result);
+
+    switch (Result.getKind()) {
+    case tok::numeric_constant:  // # 7  GNU line marker directive.
+        return HandleDigitDirective(Result);
+    default:
+        IdentifierInfo *II = Result.getIdentifierInfo();
+        // Ask what the preprocessor keyword ID is.
+        switch (II->getPPKeywordID()) {
+        default: break;
+        // C99 6.10.1 - Conditional Inclusion.
+        case tok::pp_if:
+            return HandleIfDirective(Result, ...);
+        case tok::pp_ifdef:
+            return HandleIfdefDirective(Result, ...);
+        case tok::pp_ifndef:
+            return HandleIfdefDirective(Result, ...);
+        case tok::pp_elif:
+        case tok::pp_elifdef:
+        case tok::pp_elifndef:
+            return HandleElifFamilyDirective(Result, ...);
+        case tok::pp_else:
+            return HandleElseDirective(Result, SavedHash);
+        case tok::pp_endif:
+            return HandleEndifDirective(Result);
+
+        // C99 6.10.2 - Source File Inclusion.
+        case tok::pp_include:
+            // Handle #include.
+            return HandleIncludeDirective(..., Result);
+        case tok::pp___include_macros:
+            // Handle -imacros.
+            return HandleIncludeMacrosDirective(..., Result);
+
+        // C99 6.10.3 - Macro Replacement.
+        case tok::pp_define:
+            return HandleDefineDirective(Result, ImmediatelyAfterTopLevelIfndef);
+        case tok::pp_undef:
+            return HandleUndefDirective();
+
+        // C99 6.10.4 - Line Control.
+        case tok::pp_line:
+            return HandleLineDirective();
+
+        // C99 6.10.5 - Error Directive.
+        case tok::pp_error:
+            return HandleUserDiagnosticDirective(Result, false);
+
+        // C99 6.10.6 - Pragma Directive.
+        case tok::pp_pragma:
+            return HandlePragmaDirective({PIK_HashPragma, SavedHash.getLocation()});
+        }
+        break;
+    }
+}
+
+void Preprocessor::HandleIncludeDirective(...) {
+    Token FilenameTok;
+    LexHeaderName(FilenameTok);
+
+    HandleHeaderIncludeOrImport(FilenameTok, ...);
+    {
+        OptionalFileEntryRef File = LookupHeaderIncludeOrImport(...);
+
+        // Check that we don't have infinite #include recursion.
+        if (IncludeMacroStack.size() == MaxAllowedIncludeStackDepth-1) {
+            Diag(FilenameTok, diag::err_pp_include_too_deep);
+            HasReachedMaxIncludeDepth = true;
+            return {ImportAction::None};
+        }
+
+        FileID FID = SourceMgr.createFileID(*File, IncludePos, FileCharacter);
+        EnterSourceFile(FID, CurDir, ...);
+    }
+}
+
+```
 
 
 ## 语法分析
@@ -477,13 +1119,15 @@ bool Parser::ParseFirstTopLevelDecl(DeclGroupPtrTy &Result, ...) {
 ///   declaration
 bool Parser::ParseTopLevelDecl(DeclGroupPtrTy &Result, ...) {
     Result = nullptr;
-    // 第一个token在
+    // 第一个token在Initialize()获取
     switch (Tok.getKind()) {
     case ...
     case tok::eof:
         Actions.ActOnEndOfTranslationUnit();
         return true;
     case tok::identifier:
+        // 旧版的c语言允许函数定义不指定返回值，默认int
+        // func(int a) { return a * 2; }
         break;
     }
 
@@ -566,7 +1210,7 @@ Parser::DeclGroupPtrTy Parser::ParseDeclarationOrFunctionDefinition(..., Parsing
         // 解析标识符和函数形参
         ParseDeclarator(D);
 
-        // 函数类型
+        // 已解析到函数形参
         if (D.isFunctionDeclarator()) {
             if (!(
                 Tok.is(tok::equal) ||           // int X()=  -> not a function def
@@ -1040,6 +1684,308 @@ StmtResult Parser::ParseStatement(...) {
 
 ```
 
-
 ## 语义分析
+
+```c++
+
+// 定义声明
+Decl *Sema::ActOnDeclarator(Scope *S, Declarator &D) {
+    Decl *Dcl = HandleDeclarator(S, D, MultiTemplateParamsArg());
+    {
+        // 查找作用域内是否定义过
+        DeclarationNameInfo NameInfo = GetNameForDeclarator(D);
+        LookupResult Previous(*this, NameInfo, ...);
+        LookupName(Previous, S, ...);
+
+        TypeSourceInfo *TInfo = GetTypeForDeclarator(D);
+        DeclContext *DC = CurContext;
+
+        NamedDecl *New;
+        if (D.getDeclSpec().getStorageClassSpec() == DeclSpec::SCS_typedef) {
+            New = ActOnTypedefDeclarator(S, D, DC, TInfo, Previous);
+        } else if (R->isFunctionType()) {
+            New = ActOnFunctionDeclarator(S, D, DC, TInfo, Previous, ...);
+        } else {
+            New = ActOnVariableDeclarator(S, D, DC, TInfo, Previous, ...);
+        }
+
+        // 加入作用域的符号表
+        PushOnScopeChains(New, S);
+
+        return New;
+    }
+
+    return Dcl;
+}
+
+// 变量声明
+NamedDecl *Sema::ActOnVariableDeclarator(Scope *S, Declarator &D, ...) {
+    QualType R = TInfo->getType();
+    DeclarationName Name = GetNameForDeclarator(D).getName();
+    IdentifierInfo *II = Name.getAsIdentifierInfo();
+
+    DeclSpec::SCS SCSpec = D.getDeclSpec().getStorageClassSpec();
+    StorageClass SC = StorageClassSpecToVarDeclStorageClass(D.getDeclSpec());
+
+    VarDecl *NewVD = VarDecl::Create(Context, DC, ..., II, R, TInfo, SC);
+
+    // 检查声明语句是否符合语义
+
+    return NewVD;
+}
+
+// 函数声明
+NamedDecl* Sema::ActOnFunctionDeclarator(Scope *S, Declarator &D, ...) {
+    // Copy the parameter declarations from the declarator D to the function declaration NewFD
+    SmallVector<ParmVarDecl*, 16> Params;
+
+    FunctionDecl *NewFD = CreateNewFunctionDecl(*this, D, DC, R, TInfo, SC, ...);
+    NewFD->setParams(Params);
+
+    // Handle attributes.
+    ProcessDeclAttributes(S, NewFD, D);
+
+    ProcessPragmaWeak(S, NewFD);
+
+    // 各种语义检查
+
+    return NewFD;
+}
+
+// 函数定义
+Decl * Sema::ActOnStartOfFunctionDef(Scope *FnBodyScope, Declarator &D, ...) {
+    Decl *DP = HandleDeclarator(ParentScope, D, TemplateParameterLists);
+    Decl *Dcl = ActOnStartOfFunctionDef(FnBodyScope, DP, SkipBody, BodyKind);
+    {
+        FunctionDecl *FD = cast<FunctionDecl>(D);
+        
+        // Enter a new function scope
+        PushFunctionScope();
+
+        ...
+
+        return D;
+    }
+
+    return dcl;
+}
+
+```
+
+## demo
+
+示例程序如下:
+
+```c
+
+#include<stdio.h>
+
+int func(int i) 
+{
+    if (i == 0 || i == 1)
+    {
+        return 1;
+    } 
+    else if (i >= 2) {
+        return func(i - 1) + func(i - 2);
+    }
+
+    return -1;
+}
+
+int main(int argc, char** argv) 
+{
+    int n = argc;
+    if (n > 2)
+    {
+        return -1;
+    }
+
+    char* param0 = argv[1];
+    if (param0 == 0)
+    {
+        return -2;
+    }
+
+    int s = 0;
+    char c;
+    int i = 0;
+    while ((c = param0[i++]) != '\0')
+    {
+        if (c < '0' || c > '9')
+        {
+            return -3;
+        }
+        
+        s *= 10;
+        s += c - '0';
+    }
+
+    printf("param = %d\n", s);
+    
+    int total = func(s);
+
+    printf("total = %d\n", total);
+
+    return 0;
+}
+
+```
+
+执行指令`clang -emit-ast demo/main.c -o demo/main.ast`产生的`AST`如下
+
+```ast
+
+// 忽略`#include<stdio.h>`的输出
+
+|-FunctionDecl 0x55555571d5c0 <demo/main.c:3:1, line:14:1> line:3:5 used func 'int (int)'
+| |-ParmVarDecl 0x55555571d528 <col:10, col:14> col:14 used i 'int'
+| `-CompoundStmt 0x55555571e700 <line:4:1, line:14:1>
+|   |-IfStmt 0x55555571da90 <line:5:5, line:11:5> has_else
+|   | |-BinaryOperator 0x55555571d760 <line:5:9, col:24> 'int' '||'
+|   | | |-BinaryOperator 0x55555571d6c8 <col:9, col:14> 'int' '=='
+|   | | | |-ImplicitCastExpr 0x55555571d6b0 <col:9> 'int' <LValueToRValue>
+|   | | | | `-DeclRefExpr 0x55555571d670 <col:9> 'int' lvalue ParmVar 0x55555571d528 'i' 'int'
+|   | | | `-IntegerLiteral 0x55555571d690 <col:14> 'int' 0
+|   | | `-BinaryOperator 0x55555571d740 <col:19, col:24> 'int' '=='
+|   | |   |-ImplicitCastExpr 0x55555571d728 <col:19> 'int' <LValueToRValue>
+|   | |   | `-DeclRefExpr 0x55555571d6e8 <col:19> 'int' lvalue ParmVar 0x55555571d528 'i' 'int'
+|   | |   `-IntegerLiteral 0x55555571d708 <col:24> 'int' 1
+|   | |-CompoundStmt 0x55555571d7b0 <line:6:5, line:8:5>
+|   | | `-ReturnStmt 0x55555571d7a0 <line:7:9, col:16>
+|   | |   `-IntegerLiteral 0x55555571d780 <col:16> 'int' 1
+|   | `-IfStmt 0x55555571da70 <line:9:10, line:11:5>
+|   |   |-BinaryOperator 0x55555571d820 <line:9:14, col:19> 'int' '>='
+|   |   | |-ImplicitCastExpr 0x55555571d808 <col:14> 'int' <LValueToRValue>
+|   |   | | `-DeclRefExpr 0x55555571d7c8 <col:14> 'int' lvalue ParmVar 0x55555571d528 'i' 'int'
+|   |   | `-IntegerLiteral 0x55555571d7e8 <col:19> 'int' 2
+|   |   `-CompoundStmt 0x55555571da58 <col:22, line:11:5>
+|   |     `-ReturnStmt 0x55555571da48 <line:10:9, col:40>
+|   |       `-BinaryOperator 0x55555571da28 <col:16, col:40> 'int' '+'
+|   |         |-CallExpr 0x55555571d928 <col:16, col:26> 'int'
+|   |         | |-ImplicitCastExpr 0x55555571d910 <col:16> 'int (*)(int)' <FunctionToPointerDecay>
+|   |         | | `-DeclRefExpr 0x55555571d840 <col:16> 'int (int)' Function 0x55555571d5c0 'func' 'int (int)'
+|   |         | `-BinaryOperator 0x55555571d8b8 <col:21, col:25> 'int' '-'
+|   |         |   |-ImplicitCastExpr 0x55555571d8a0 <col:21> 'int' <LValueToRValue>
+|   |         |   | `-DeclRefExpr 0x55555571d860 <col:21> 'int' lvalue ParmVar 0x55555571d528 'i' 'int'
+|   |         |   `-IntegerLiteral 0x55555571d880 <col:25> 'int' 1
+|   |         `-CallExpr 0x55555571da00 <col:30, col:40> 'int'
+|   |           |-ImplicitCastExpr 0x55555571d9e8 <col:30> 'int (*)(int)' <FunctionToPointerDecay>
+|   |           | `-DeclRefExpr 0x55555571d950 <col:30> 'int (int)' Function 0x55555571d5c0 'func' 'int (int)'
+|   |           `-BinaryOperator 0x55555571d9c8 <col:35, col:39> 'int' '-'
+|   |             |-ImplicitCastExpr 0x55555571d9b0 <col:35> 'int' <LValueToRValue>
+|   |             | `-DeclRefExpr 0x55555571d970 <col:35> 'int' lvalue ParmVar 0x55555571d528 'i' 'int'
+|   |             `-IntegerLiteral 0x55555571d990 <col:39> 'int' 2
+|   `-ReturnStmt 0x55555571daf8 <line:13:5, col:13>
+|     `-UnaryOperator 0x55555571dae0 <col:12, col:13> 'int' prefix '-'
+|       `-IntegerLiteral 0x55555571dac0 <col:13> 'int' 1
+`-FunctionDecl 0x55555571e898 <line:16:1, line:51:1> line:16:5 main 'int (int, char **)'
+  |-ParmVarDecl 0x55555571e738 <col:10, col:14> col:14 used argc 'int'
+  |-ParmVarDecl 0x55555571e7b8 <col:20, col:27> col:27 used argv 'char **'
+  `-CompoundStmt 0x55555571f808 <line:17:1, line:51:1>
+    |-DeclStmt 0x55555571ea08 <line:18:5, col:17>
+    | `-VarDecl 0x55555571e968 <col:5, col:13> col:9 used n 'int' cinit
+    |   `-ImplicitCastExpr 0x55555571e9f0 <col:13> 'int' <LValueToRValue>
+    |     `-DeclRefExpr 0x55555571e9d0 <col:13> 'int' lvalue ParmVar 0x55555571e738 'argc' 'int'
+    |-IfStmt 0x55555571eaf8 <line:19:5, line:22:5>
+    | |-BinaryOperator 0x55555571ea78 <line:19:9, col:13> 'int' '>'
+    | | |-ImplicitCastExpr 0x55555571ea60 <col:9> 'int' <LValueToRValue>
+    | | | `-DeclRefExpr 0x55555571ea20 <col:9> 'int' lvalue Var 0x55555571e968 'n' 'int'
+    | | `-IntegerLiteral 0x55555571ea40 <col:13> 'int' 2
+    | `-CompoundStmt 0x55555571eae0 <line:20:5, line:22:5>
+    |   `-ReturnStmt 0x55555571ead0 <line:21:9, col:17>
+    |     `-UnaryOperator 0x55555571eab8 <col:16, col:17> 'int' prefix '-'
+    |       `-IntegerLiteral 0x55555571ea98 <col:17> 'int' 1
+    |-DeclStmt 0x55555571ec28 <line:24:5, col:27>
+    | `-VarDecl 0x55555571eb30 <col:5, col:26> col:11 used param0 'char *' cinit
+    |   `-ImplicitCastExpr 0x55555571ec10 <col:20, col:26> 'char *' <LValueToRValue>
+    |     `-ArraySubscriptExpr 0x55555571ebf0 <col:20, col:26> 'char *' lvalue
+    |       |-ImplicitCastExpr 0x55555571ebd8 <col:20> 'char **' <LValueToRValue>
+    |       | `-DeclRefExpr 0x55555571eb98 <col:20> 'char **' lvalue ParmVar 0x55555571e7b8 'argv' 'char **'
+    |       `-IntegerLiteral 0x55555571ebb8 <col:25> 'int' 1
+    |-IfStmt 0x55555571ed30 <line:25:5, line:28:5>
+    | |-BinaryOperator 0x55555571ecb0 <line:25:9, col:19> 'int' '=='
+    | | |-ImplicitCastExpr 0x55555571ec80 <col:9> 'char *' <LValueToRValue>
+    | | | `-DeclRefExpr 0x55555571ec40 <col:9> 'char *' lvalue Var 0x55555571eb30 'param0' 'char *'
+    | | `-ImplicitCastExpr 0x55555571ec98 <col:19> 'char *' <NullToPointer>
+    | |   `-IntegerLiteral 0x55555571ec60 <col:19> 'int' 0
+    | `-CompoundStmt 0x55555571ed18 <line:26:5, line:28:5>
+    |   `-ReturnStmt 0x55555571ed08 <line:27:9, col:17>
+    |     `-UnaryOperator 0x55555571ecf0 <col:16, col:17> 'int' prefix '-'
+    |       `-IntegerLiteral 0x55555571ecd0 <col:17> 'int' 2
+    |-DeclStmt 0x55555571edf0 <line:30:5, col:14>
+    | `-VarDecl 0x55555571ed68 <col:5, col:13> col:9 used s 'int' cinit
+    |   `-IntegerLiteral 0x55555571edd0 <col:13> 'int' 0
+    |-DeclStmt 0x55555571ee80 <line:31:5, col:11>
+    | `-VarDecl 0x55555571ee18 <col:5, col:10> col:10 used c 'char'
+    |-DeclStmt 0x55555571ef38 <line:32:5, col:14>
+    | `-VarDecl 0x55555571eeb0 <col:5, col:13> col:9 used i 'int' cinit
+    |   `-IntegerLiteral 0x55555571ef18 <col:13> 'int' 0
+    |-WhileStmt 0x55555571f3c8 <line:33:5, line:42:5>
+    | |-BinaryOperator 0x55555571f088 <line:33:12, col:33> 'int' '!='
+    | | |-ImplicitCastExpr 0x55555571f070 <col:12, col:28> 'int' <IntegralCast>
+    | | | `-ParenExpr 0x55555571f038 <col:12, col:28> 'char'
+    | | |   `-BinaryOperator 0x55555571f018 <col:13, col:27> 'char' '='
+    | | |     |-DeclRefExpr 0x55555571ef50 <col:13> 'char' lvalue Var 0x55555571ee18 'c' 'char'
+    | | |     `-ImplicitCastExpr 0x55555571f000 <col:17, col:27> 'char' <LValueToRValue>
+    | | |       `-ArraySubscriptExpr 0x55555571efe0 <col:17, col:27> 'char' lvalue
+    | | |         |-ImplicitCastExpr 0x55555571efc8 <col:17> 'char *' <LValueToRValue>
+    | | |         | `-DeclRefExpr 0x55555571ef70 <col:17> 'char *' lvalue Var 0x55555571eb30 'param0' 'char *'
+    | | |         `-UnaryOperator 0x55555571efb0 <col:24, col:25> 'int' postfix '++'
+    | | |           `-DeclRefExpr 0x55555571ef90 <col:24> 'int' lvalue Var 0x55555571eeb0 'i' 'int'
+    | | `-CharacterLiteral 0x55555571f058 <col:33> 'int' 0
+    | `-CompoundStmt 0x55555571f3a0 <line:34:5, line:42:5>
+    |   |-IfStmt 0x55555571f238 <line:35:9, line:38:9>
+    |   | |-BinaryOperator 0x55555571f1b8 <line:35:13, col:28> 'int' '||'
+    |   | | |-BinaryOperator 0x55555571f110 <col:13, col:17> 'int' '<'
+    |   | | | |-ImplicitCastExpr 0x55555571f0f8 <col:13> 'int' <IntegralCast>
+    |   | | | | `-ImplicitCastExpr 0x55555571f0e0 <col:13> 'char' <LValueToRValue>
+    |   | | | |   `-DeclRefExpr 0x55555571f0a8 <col:13> 'char' lvalue Var 0x55555571ee18 'c' 'char'
+    |   | | | `-CharacterLiteral 0x55555571f0c8 <col:17> 'int' 48
+    |   | | `-BinaryOperator 0x55555571f198 <col:24, col:28> 'int' '>'
+    |   | |   |-ImplicitCastExpr 0x55555571f180 <col:24> 'int' <IntegralCast>
+    |   | |   | `-ImplicitCastExpr 0x55555571f168 <col:24> 'char' <LValueToRValue>
+    |   | |   |   `-DeclRefExpr 0x55555571f130 <col:24> 'char' lvalue Var 0x55555571ee18 'c' 'char'
+    |   | |   `-CharacterLiteral 0x55555571f150 <col:28> 'int' 57
+    |   | `-CompoundStmt 0x55555571f220 <line:36:9, line:38:9>
+    |   |   `-ReturnStmt 0x55555571f210 <line:37:13, col:21>
+    |   |     `-UnaryOperator 0x55555571f1f8 <col:20, col:21> 'int' prefix '-'
+    |   |       `-IntegerLiteral 0x55555571f1d8 <col:21> 'int' 3
+    |   |-CompoundAssignOperator 0x55555571f298 <line:40:9, col:14> 'int' '*=' ComputeLHSTy='int' ComputeResultTy='int'
+    |   | |-DeclRefExpr 0x55555571f258 <col:9> 'int' lvalue Var 0x55555571ed68 's' 'int'
+    |   | `-IntegerLiteral 0x55555571f278 <col:14> 'int' 10
+    |   `-CompoundAssignOperator 0x55555571f370 <line:41:9, col:18> 'int' '+=' ComputeLHSTy='int' ComputeResultTy='int'
+    |     |-DeclRefExpr 0x55555571f2c8 <col:9> 'int' lvalue Var 0x55555571ed68 's' 'int'
+    |     `-BinaryOperator 0x55555571f350 <col:14, col:18> 'int' '-'
+    |       |-ImplicitCastExpr 0x55555571f338 <col:14> 'int' <IntegralCast>
+    |       | `-ImplicitCastExpr 0x55555571f320 <col:14> 'char' <LValueToRValue>
+    |       |   `-DeclRefExpr 0x55555571f2e8 <col:14> 'char' lvalue Var 0x55555571ee18 'c' 'char'
+    |       `-CharacterLiteral 0x55555571f308 <col:18> 'int' 48
+    |-CallExpr 0x55555571f4f8 <line:44:5, col:29> 'int'
+    | |-ImplicitCastExpr 0x55555571f4e0 <col:5> 'int (*)(const char *, ...)' <FunctionToPointerDecay>
+    | | `-DeclRefExpr 0x55555571f3e8 <col:5> 'int (const char *, ...)' Function 0x555555707118 'printf' 'int (const char *, ...)'
+    | |-ImplicitCastExpr 0x55555571f540 <col:12> 'const char *' <NoOp>
+    | | `-ImplicitCastExpr 0x55555571f528 <col:12> 'char *' <ArrayToPointerDecay>
+    | |   `-StringLiteral 0x55555571f450 <col:12> 'char[12]' lvalue "param = %d\n"
+    | `-ImplicitCastExpr 0x55555571f558 <col:28> 'int' <LValueToRValue>
+    |   `-DeclRefExpr 0x55555571f478 <col:28> 'int' lvalue Var 0x55555571ed68 's' 'int'
+    |-DeclStmt 0x55555571f688 <line:46:5, col:24>
+    | `-VarDecl 0x55555571f588 <col:5, col:23> col:9 used total 'int' cinit
+    |   `-CallExpr 0x55555571f648 <col:17, col:23> 'int'
+    |     |-ImplicitCastExpr 0x55555571f630 <col:17> 'int (*)(int)' <FunctionToPointerDecay>
+    |     | `-DeclRefExpr 0x55555571f5f0 <col:17> 'int (int)' Function 0x55555571d5c0 'func' 'int (int)'
+    |     `-ImplicitCastExpr 0x55555571f670 <col:22> 'int' <LValueToRValue>
+    |       `-DeclRefExpr 0x55555571f610 <col:22> 'int' lvalue Var 0x55555571ed68 's' 'int'
+    |-CallExpr 0x55555571f760 <line:48:5, col:33> 'int'
+    | |-ImplicitCastExpr 0x55555571f748 <col:5> 'int (*)(const char *, ...)' <FunctionToPointerDecay>
+    | | `-DeclRefExpr 0x55555571f6a0 <col:5> 'int (const char *, ...)' Function 0x555555707118 'printf' 'int (const char *, ...)'
+    | |-ImplicitCastExpr 0x55555571f7a8 <col:12> 'const char *' <NoOp>
+    | | `-ImplicitCastExpr 0x55555571f790 <col:12> 'char *' <ArrayToPointerDecay>
+    | |   `-StringLiteral 0x55555571f6c0 <col:12> 'char[12]' lvalue "total = %d\n"
+    | `-ImplicitCastExpr 0x55555571f7c0 <col:28> 'int' <LValueToRValue>
+    |   `-DeclRefExpr 0x55555571f710 <col:28> 'int' lvalue Var 0x55555571f588 'total' 'int'
+    `-ReturnStmt 0x55555571f7f8 <line:50:5, col:12>
+      `-IntegerLiteral 0x55555571f7d8 <col:12> 'int' 0
+
+```
 
